# pegg

./: .clang-format  README  README.md  peggps
cups2pegg/: howto_label.html  install.html
cups2pegg/src/: casio_el.drv  casio_kl.drv  casio_kp.drv  cups2pegg
cups2pegg/src/ppd/: casio_el.ppd  casio_kl.ppd  casio_kp.ppd
doc/: ps2pegg  xbm2crw.txt
kpegg/: AUTHORS  Makefile.in  configure  configure.in  configure.in.in  kpegg.kdevelop  kpegg.kdevelop.pcs
kpegg/autom4te.cache/: output.0  traces.0
kpegg/debug/: Makefile  config.h  config.status  libtool
kpegg/debug/doc/: Makefile
kpegg/debug/doc/en/: Makefile  index.cache.bz2
kpegg/debug/po/: Makefile
kpegg/debug/src/: Makefile  kpegg  kpegg.moc  kpegg_client  kpeggiface.kidl  kpeggiface_skel.cpp  kpeggview.moc  pref.moc
kpegg/doc/: Makefile.am  Makefile.in
kpegg/doc/en/: Makefile.am  Makefile.in  index.docbook
kpegg/src/: Makefile.am  Makefile.in  kpegg.cpp  kpegg.desktop  kpegg.h  kpegg.lsm  kpegg_client.cpp  kpeggiface.h  kpeggui.rc  kpeggview.cpp  kpeggview.h  main.cpp  pref.cpp  pref.h
kpegg/templates/: cpp
pegg/: CHANGELOG  INSTALL  Makefile  README  pegg.1  pegg.c  test_raw
ps2pegg/: ps2pegg.awk  ps2pegg.sh
scripts/: peggps  xbm2crw
web/cgi-bin/: print-plain-label  print-plain-label.pl  print-title-subtitle-label.pl
web/html/: plain.html  title-and-subtitle.html
xbm2crw/: template.xbm  xbm2crw
